[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buttervolume"
version = "3.13.0"
description = "BTRFS Volume plugin for Docker"
readme = "README.rst"
license = "MIT"
authors = [
    {name = "Christophe Combelles", email = "ccomb@free.fr"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "bottle",
    "requests-unixsocket2",
]

[project.optional-dependencies]
test = [
    "pytest",
    "webtest",
]
dev = [
    "pytest", 
    "webtest",
    "ruff",
]

[project.scripts]
buttervolume = "buttervolume.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["buttervolume"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test*.py"]
python_classes = ["Test*"] 
python_functions = ["test_*"]